# bicycles-api

./: .env  Cargo.toml  README.md
bicycles-actix/: Cargo.toml
bicycles-actix/src/: controllers.rs  main.rs  models.rs
bicycles-core/: Cargo.toml
bicycles-core/src/: main.rs  models.rs  repositories.rs
bicycles-diesel/: Cargo.toml
bicycles-diesel/migrations/2020-07-30-164022_create_bicycles/: down.sql  up.sql
bicycles-diesel/src/: lib.rs  models.rs  schema.rs
