[package]
name = "bicycles-actix"
version = "0.1.0"
authors = ["Dany Diaz <dany.diaz91@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bicycles-core = {path = "../bicycles-core"}
bicycles-diesel = {path = "../bicycles-diesel"}
actix-web = "2.0"
actix-rt = "1.0"
uuid = {version="0.8", features=["serde", "v4"]}