[package]
name = "bicycles-core"
version = "0.1.0"
authors = ["Dany Diaz <dany.diaz91@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
chrono = { version = "0.4.13", features = ["serde"] }
uuid = { version = "0.8", feature = ["serde"] }