[package]
name = "bicycles-diesel"
version = "0.1.0"
authors = ["Dany Diaz <dany.diaz91@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bicycles-core = { path = "../bicycles-core" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
